Complete AddTournament component

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Tournament</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>It's Game Time</title>
+  <link rel="icon" href="./assets/img/BLPRS_LOGO.png" type="image">
+
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a href="/" class="navbar-brand" >
+            <img src="./assets/img/BLPRS.svg" alt="logo" style="width:180px">
+            Tournament Generator
+        </a>
+</nav>
+</head>
+<body>
+  <app-root></app-root>
+</body>
 </html>
