Updated Page Logo and Spacing
Update Logo and Spacing

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>It's Game Time</title>
-  <link rel="icon" href="./assets/img/BLPRS_LOGO.png" type="image">
+  <link rel="icon" href="./assets/img/BPLRS_LOGO.ico" type="image">
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
