--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>It's Game Time</title>
-    <base href="/" />
+    <base href="https://blprs-tournament-fe.nn.r.appspot.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./assets/img/BLPRS_LOGO.png" type="image" />
   </head>
